--- a/index.html
+++ b/index.html
@@ -4,115 +4,126 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Attendees List</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        .attendee {
-            margin-bottom: 20px;
-        }
-        .attendee h3 {
-            margin: 0;
-        }
-        #counters {
-            margin-bottom: 20px;
-        }
-    </style>
 </head>
 <body>
     <h1>Attendees List</h1>
-    <div id="counters">
-        <p><strong>Going:</strong> <span id="going-count">0</span></p>
-        <p><strong>Not Going:</strong> <span id="not-going-count">0</span></p>
-        <p><strong>Total Pax:</strong> <span id="total-pax">0</span></p>
-    </div>
-    <div id="attendees-container"></div>
+    <form id="attendee-form">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required><br><br>
+        <label for="pax">Pax:</label>
+        <input type="number" id="pax" name="pax" required><br><br>
+        <label for="status">Status:</label>
+        <select id="status" name="status" required>
+            <option value="Going">Going</option>
+            <option value="Not Going">Not Going</option>
+        </select><br><br>
+        <label for="comment">Comment:</label>
+        <textarea id="comment" name="comment" rows="4" cols="50"></textarea><br><br>
+        <button type="submit">Submit</button>
+    </form>
 
+    <h2>Going</h2>
+    <div id="going-attendees"></div>
+    <h2>Not Going</h2>
+    <div id="not-going-attendees"></div>
+
+    <h2>Statistics</h2>
+    <p><strong>Total Going:</strong> <span id="total-going">0</span></p>
+    <p><strong>Total Not Going:</strong> <span id="total-not-going">0</span></p>
+    <p><strong>Total Pax:</strong> <span id="total-pax">0</span></p>
+
+    <!-- Firebase App (the core Firebase SDK) -->
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
+    <!-- Firebase Firestore -->
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore.js"></script>
     <script>
-        async function fetchMarkdown() {
-            try {
-                const response = await fetch('attendees.md');
-                const text = await response.text();
-                displayContent(text);
-            } catch (error) {
-                console.error('Error fetching the markdown file:', error);
-            }
-        }
+        // Your Firebase configuration
+        const firebaseConfig = {
+  apiKey: "AIzaSyAUcAdcSR2jIiDWI3J_Wa78Xiy-saqMU78",
+  authDomain: "rsvp-daacd.firebaseapp.com",
+  projectId: "rsvp-daacd",
+  storageBucket: "rsvp-daacd.appspot.com",
+  messagingSenderId: "257111835647",
+  appId: "1:257111835647:web:51b0d155e48363713eddca",
+  measurementId: "G-5ZWXHTGDPG"
+};
 
-        function displayContent(markdown) {
-            const container = document.getElementById('attendees-container');
-            const goingCountElem = document.getElementById('going-count');
-            const notGoingCountElem = document.getElementById('not-going-count');
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        const db = firebase.firestore();
+
+        // Handle form submission
+        document.getElementById('attendee-form').addEventListener('submit', async function(event) {
+            event.preventDefault();
+
+            const name = document.getElementById('name').value;
+            const pax = document.getElementById('pax').value;
+            const status = document.getElementById('status').value;
+            const comment = document.getElementById('comment').value;
+
+            try {
+                await db.collection('attendees').add({
+                    name,
+                    pax: parseInt(pax, 10),
+                    status,
+                    comment
+                });
+                alert('Attendee details submitted successfully!');
+                event.target.reset();
+                loadAttendees();
+            } catch (error) {
+                console.error('Error adding document: ', error);
+            }
+        });
+
+        // Load attendees from Firestore
+        async function loadAttendees() {
+            const goingContainer = document.getElementById('going-attendees');
+            const notGoingContainer = document.getElementById('not-going-attendees');
+            const totalGoingElem = document.getElementById('total-going');
+            const totalNotGoingElem = document.getElementById('total-not-going');
             const totalPaxElem = document.getElementById('total-pax');
-            const lines = markdown.split('\n');
-            let html = '';
-            let attendeeDetails = {};
-            let goingCount = 0;
-            let notGoingCount = 0;
+
+            goingContainer.innerHTML = '';
+            notGoingContainer.innerHTML = '';
+
+            let totalGoing = 0;
+            let totalNotGoing = 0;
             let totalPax = 0;
 
-            lines.forEach(line => {
-                if (line.startsWith('- **Name**:')) {
-                    if (attendeeDetails.name) {
-                        // Add the previously collected attendee details to HTML
-                        html += `
-                            <div class="attendee">
-                                <h3>${attendeeDetails.name}</h3>
-                                <p><strong>Pax:</strong> ${attendeeDetails.pax || 'N/A'}</p>
-                                <p><strong>Status:</strong> ${attendeeDetails.status || 'N/A'}</p>
-                                <p><strong>Comment:</strong> ${attendeeDetails.comment || 'N/A'}</p>
-                            </div>
-                        `;
-                        // Increment the counter based on status
-                        if (attendeeDetails.status === 'Going') {
-                            goingCount++;
-                        } else if (attendeeDetails.status === 'Not Going') {
-                            notGoingCount++;
-                        }
-                        // Add Pax to totalPax
-                        totalPax += parseInt(attendeeDetails.pax, 10) || 0;
+            try {
+                const snapshot = await db.collection('attendees').get();
+                snapshot.forEach(doc => {
+                    const data = doc.data();
+                    const attendeeHTML = `
+                        <div>
+                            <h3>${data.name}</h3>
+                            <p><strong>Pax:</strong> ${data.pax || 'N/A'}</p>
+                            <p><strong>Comment:</strong> ${data.comment || 'N/A'}</p>
+                        </div>
+                    `;
+
+                    if (data.status === 'Going') {
+                        goingContainer.innerHTML += attendeeHTML;
+                        totalGoing++;
+                    } else if (data.status === 'Not Going') {
+                        notGoingContainer.innerHTML += attendeeHTML;
+                        totalNotGoing++;
                     }
-                    // Start a new attendee
-                    attendeeDetails = {
-                        name: line.split(': ')[1].trim()
-                    };
-                } else if (line.trim().startsWith('- **Pax**:')) {
-                    attendeeDetails.pax = line.split(': ')[1].trim();
-                } else if (line.trim().startsWith('- **Status**:')) {
-                    attendeeDetails.status = line.split(': ')[1].trim();
-                } else if (line.trim().startsWith('- **Comment**:')) {
-                    attendeeDetails.comment = line.split(': ')[1].trim();
-                }
-            });
 
-            // Add the last collected attendee details to HTML
-            if (attendeeDetails.name) {
-                html += `
-                    <div class="attendee">
-                        <h3>${attendeeDetails.name}</h3>
-                        <p><strong>Pax:</strong> ${attendeeDetails.pax || 'N/A'}</p>
-                        <p><strong>Status:</strong> ${attendeeDetails.status || 'N/A'}</p>
-                        <p><strong>Comment:</strong> ${attendeeDetails.comment || 'N/A'}</p>
-                    </div>
-                `;
-                // Increment the counter based on status
-                if (attendeeDetails.status === 'Going') {
-                    goingCount++;
-                } else if (attendeeDetails.status === 'Not Going') {
-                    notGoingCount++;
-                }
-                // Add Pax to totalPax
-                totalPax += parseInt(attendeeDetails.pax, 10) || 0;
+                    totalPax += data.pax || 0;
+                });
+
+                totalGoingElem.textContent = totalGoing;
+                totalNotGoingElem.textContent = totalNotGoing;
+                totalPaxElem.textContent = totalPax;
+            } catch (error) {
+                console.error('Error fetching documents: ', error);
             }
-
-            container.innerHTML = html;
-            goingCountElem.textContent = goingCount;
-            notGoingCountElem.textContent = notGoingCount;
-            totalPaxElem.textContent = totalPax;
         }
 
-        fetchMarkdown();
+        // Initial load
+        loadAttendees();
     </script>
 </body>
 </html>
