--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
     </div>
 
     <!-- Script -->
-    <script type="module" src="scripts.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
