--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
         <div class="popup-content">
             <button class="close-btn" onclick="toggleAttendeesPopup()">Close</button>
             <h2>Attendees List</h2>
-            <h3>Going</h3>
-            <div id="going-attendees"></div>
-            <h3>Not Going</h3>
-            <div id="not-going-attendees"></div>
+            <div class="popup-scrollable">
+                <h3>Going</h3>
+                <div id="going-attendees"></div>
+                <h3>Not Going</h3>
+                <div id="not-going-attendees"></div>
+            </div>
         </div>
     </div>
 
