--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
         <h2>Statistics</h2>
         <p><strong>Total Going:</strong> <span id="total-going">0</span></p>
+        <p><strong>Total Not Going:</strong> <span id="total-not-going">0</span></p>
         <p><strong>Total Pax:</strong> <span id="total-pax">0</span></p>
     </div>
 
@@ -44,6 +45,8 @@
             <div class="popup-scrollable">
                 <h3>Going</h3>
                 <div id="going-attendees"></div>
+                <h3>Not Going</h3>
+                <div id="not-going-attendees"></div>
             </div>
         </div>
     </div>
